--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 30003
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.93
-  maximum: 7.97
-  average: 7.43
-  UpdateDay: '2022-04-27T06:30:32.437208'
+  minimum: 7.16
+  maximum: 7.82
+  average: 7.45
+  UpdateDay: '2022-04-27T09:32:21.457096'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 27936
+  Rank: 27938
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,41 +55,41 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 9.71
-  maximum: 14.2
-  average: 12.2
-  UpdateDay: '2022-04-27T06:30:32.460928'
+  minimum: 8.07
+  maximum: 13.45
+  average: 10.18
+  UpdateDay: '2022-04-27T09:30:57.133038'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 24394
+  Rank: 24465
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
-  port: 50004
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 50004
   password: '4415934295'
   cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 10.75
-  maximum: 11.25
-  average: 10.94
-  UpdateDay: '2022-04-27T06:31:57.144064'
+  minimum: 9.27
+  maximum: 10.25
+  average: 9.66
+  UpdateDay: '2022-04-27T09:30:57.131331'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 22037
+  Rank: 22038
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 1443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.06
-  maximum: 59.39
-  average: 59.21
-  UpdateDay: '2022-04-27T06:30:38.401492'
+  minimum: 58.73
+  maximum: 59.63
+  average: 59.15
+  UpdateDay: '2022-04-27T09:32:22.880221'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 18470
+  Rank: 18472
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -102,7 +102,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 15141
+  Rank: 15231
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -112,12 +112,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 76.73
-  maximum: 87.06
-  average: 81.72
-  UpdateDay: '2022-04-27T06:32:00.775418'
+  minimum: 76.56
+  maximum: 86.29
+  average: 80.86
+  UpdateDay: '2022-04-27T09:32:23.312067'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 13927
+  Rank: 13977
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   type: trojan
@@ -127,27 +127,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 24.82
-  maximum: 52.09
-  average: 39.76
-  UpdateDay: '2022-04-27T06:30:32.538457'
+  minimum: 38.21
+  maximum: 48.87
+  average: 42.82
+  UpdateDay: '2022-04-27T09:30:57.245919'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 13577
+  Rank: 13578
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 53.7
-  maximum: 58.01
-  average: 55.24
-  UpdateDay: '2022-04-27T06:30:37.788835'
+  minimum: 50.02
+  maximum: 60.75
+  average: 53.8
+  UpdateDay: '2022-04-27T09:32:22.690109'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 13373
+  Rank: 13453
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -157,12 +157,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.89
-  maximum: 47.78
-  average: 42.27
-  UpdateDay: '2022-04-27T06:31:57.922289'
+  minimum: 37.69
+  maximum: 46.09
+  average: 40.51
+  UpdateDay: '2022-04-27T09:32:22.500816'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 11046
+  Rank: 11048
 - name: cscu.wecanfly.top:51132@trojan
   server: cscu.wecanfly.top
   port: 51132
@@ -177,7 +177,7 @@ proxies:
   average: 39.38
   UpdateDay: '2022-04-03T15:12:55.533673'
   PFirstFoundDay: '2022-03-13T18:25:19.181411'
-  Rank: 8942
+  Rank: 8792
 - alterId: 0
   cipher: auto
   http-opts:
@@ -212,29 +212,14 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 25.95
-  maximum: 43.11
-  average: 37.26
-  UpdateDay: '2022-04-27T06:31:57.886563'
+  minimum: 38.22
+  maximum: 44.95
+  average: 40.83
+  UpdateDay: '2022-04-27T09:32:22.482064'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 8044
+  Rank: 8046
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
-  port: 443
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
-  password: a3fa58b581353bb375d2ddad0f327938
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 239.77
-  maximum: 249.52
-  average: 246.03
-  UpdateDay: '2022-04-27T06:32:02.177710'
-  PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 5531
-- name: 72.167.45.6:443@trojan
-  server: 72.167.45.6
   port: 443
   type: trojan
   country: "\U0001F1FA\U0001F1F8 US"
@@ -242,12 +227,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 171.33
-  maximum: 171.56
-  average: 171.43
-  UpdateDay: '2022-04-27T06:32:01.524644'
+  minimum: 242.42
+  maximum: 248.92
+  average: 246.72
+  UpdateDay: '2022-04-27T09:32:24.273573'
+  PFirstFoundDay: '2022-03-16T00:32:54.032660'
+  Rank: 5535
+- name: 72.167.45.6:443@trojan
+  server: 72.167.45.6
+  port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
+  password: a3fa58b581353bb375d2ddad0f327938
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 173.24
+  maximum: 205.1
+  average: 193.49
+  UpdateDay: '2022-04-27T09:32:23.856477'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 5383
+  Rank: 5386
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -268,46 +268,46 @@ proxies:
   port: 443
   type: trojan
   country: "\U0001F1EF\U0001F1F5 JP"
-  password: bcYWVzLTI1Ni1nY206Q1VuZFNabll23115_5a451f03
+  password: 82a115db-6e59-4319-9730-8f5638908d59YWVzLTI1Ni1nY2023115_5a451f03
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 33.87
-  maximum: 40.68
-  average: 36.59
-  UpdateDay: '2022-04-27T06:31:58.275513'
+  minimum: 34.28
+  maximum: 38.1
+  average: 36.57
+  UpdateDay: '2022-04-27T09:32:22.813552'
   PFirstFoundDay: '2022-03-31T03:35:27.638826'
-  Rank: 4635
+  Rank: 4639
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.49
-  maximum: 48.62
-  average: 45.1
-  UpdateDay: '2022-04-27T06:30:35.590978'
+  minimum: 37.93
+  maximum: 38.93
+  average: 38.42
+  UpdateDay: '2022-04-27T09:32:22.506786'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 4197
+  Rank: 4199
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 44.96
-  maximum: 56.64
-  average: 50.88
-  UpdateDay: '2022-04-27T06:31:28.842026'
+  minimum: 36.94
+  maximum: 40.32
+  average: 38.08
+  UpdateDay: '2022-04-27T09:32:23.417813'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 4146
+  Rank: 4148
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
