--- a/daili.yaml
+++ b/daili.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.66
-  maximum: 7.63
-  average: 7.25
-  UpdateDay: '2022-05-03T21:30:29.278807'
+  minimum: 6.48
+  maximum: 7.74
+  average: 7.15
+  UpdateDay: '2022-05-04T00:30:48.134824'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 29635
+  Rank: 29736
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 10.11
   UpdateDay: '2022-05-03T18:30:50.145520'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 26256
+  Rank: 26356
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -68,12 +68,12 @@ proxies:
   cipher: aes-256-cfb
   password: '4415934295'
   success_rate: 100.0
-  minimum: 10.47
-  maximum: 13.14
-  average: 12.07
-  UpdateDay: '2022-05-03T21:30:29.269990'
+  minimum: 9.7
+  maximum: 10.55
+  average: 10.02
+  UpdateDay: '2022-05-04T00:30:48.126148'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 22471
+  Rank: 22482
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -83,12 +83,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 63.14
-  maximum: 101.98
-  average: 78.7
-  UpdateDay: '2022-05-03T21:30:30.541704'
+  minimum: 69.5
+  maximum: 96.7
+  average: 86.72
+  UpdateDay: '2022-05-04T00:30:49.456270'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 19890
+  Rank: 19951
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -101,7 +101,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 15802
+  Rank: 15793
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -111,12 +111,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 11.13
-  maximum: 69.7
-  average: 40.39
-  UpdateDay: '2022-05-03T21:30:29.360552'
+  minimum: 12.98
+  maximum: 41.58
+  average: 30.67
+  UpdateDay: '2022-05-04T00:30:48.209214'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 15362
+  Rank: 15453
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -126,12 +126,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 75.62
-  maximum: 83.51
-  average: 79.87
-  UpdateDay: '2022-05-03T21:30:32.822105'
+  minimum: 74.47
+  maximum: 88.64
+  average: 81.31
+  UpdateDay: '2022-05-04T00:30:51.481993'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 14848
+  Rank: 14857
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -141,12 +141,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 175.33
-  maximum: 1292.63
-  average: 575.77
-  UpdateDay: '2022-05-03T21:30:32.038695'
+  minimum: 52.01
+  maximum: 57.32
+  average: 54.0
+  UpdateDay: '2022-05-04T00:30:49.374864'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 14677
+  Rank: 14719
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -156,12 +156,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 30.67
-  maximum: 72.18
-  average: 47.7
-  UpdateDay: '2022-05-03T21:30:29.380076'
+  minimum: 12.12
+  maximum: 91.12
+  average: 48.09
+  UpdateDay: '2022-05-04T00:30:48.225700'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 12956
+  Rank: 13047
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -171,12 +171,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 44.89
-  maximum: 49.08
-  average: 46.52
-  UpdateDay: '2022-05-03T21:30:29.406251'
+  minimum: 39.58
+  maximum: 74.23
+  average: 51.76
+  UpdateDay: '2022-05-04T00:30:48.253770'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 8949
+  Rank: 9000
 - alterId: 0
   cipher: auto
   http-opts:
@@ -201,7 +201,22 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 8873
+  Rank: 8903
+- name: tky3.ssgnode.ga:443@trojan
+  server: tky3.ssgnode.ga
+  port: 443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
+  password: 82a115db-6e59-4319-973lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 39.61
+  maximum: 55.27
+  average: 45.7
+  UpdateDay: '2022-05-04T00:30:49.325882'
+  PFirstFoundDay: '2022-03-31T03:35:27.638826'
+  Rank: 6362
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
@@ -211,27 +226,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 176.66
-  maximum: 203.66
-  average: 187.99
-  UpdateDay: '2022-05-03T21:30:33.424541'
+  minimum: 177.84
+  maximum: 195.37
+  average: 185.06
+  UpdateDay: '2022-05-04T00:30:51.997650'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 6298
-- name: tky3.ssgnode.ga:443@trojan
-  server: tky3.ssgnode.ga
-  port: 443
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
-  password: 82lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 43.71
-  maximum: 48.57
-  average: 45.34
-  UpdateDay: '2022-05-03T21:30:30.446014'
-  PFirstFoundDay: '2022-03-31T03:35:27.638826'
-  Rank: 6267
+  Rank: 6339
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -241,12 +241,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.19
-  maximum: 46.64
-  average: 41.6
-  UpdateDay: '2022-05-03T21:30:30.399378'
+  minimum: 38.82
+  maximum: 45.94
+  average: 41.41
+  UpdateDay: '2022-05-04T00:30:49.263090'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 6198
+  Rank: 6285
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
@@ -256,12 +256,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 252.16
-  maximum: 257.42
-  average: 254.07
-  UpdateDay: '2022-05-03T21:30:33.659322'
+  minimum: 250.78
+  maximum: 258.05
+  average: 253.62
+  UpdateDay: '2022-05-04T00:30:52.388439'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 5966
+  Rank: 5983
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -271,12 +271,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 46.81
-  maximum: 54.53
-  average: 50.2
-  UpdateDay: '2022-05-03T21:30:33.048328'
+  minimum: 39.24
+  maximum: 54.94
+  average: 47.86
+  UpdateDay: '2022-05-04T00:30:51.834649'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 5854
+  Rank: 5950
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -291,7 +291,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 5725
+  Rank: 5773
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -306,7 +306,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 5254
+  Rank: 5344
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -318,7 +318,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 5149
+  Rank: 5229
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -330,7 +330,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 5125
+  Rank: 5209
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -349,8 +349,8 @@ proxy-groups:
   - hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
   - 35.153.162.49:27080@vmess
-  - 72.167.45.6:443@trojan
   - tky3.ssgnode.ga:443@trojan
+  - 72.167.45.6:443@trojan
   - www.zx07.top:443@trojan
   - 184.168.127.50:443@trojan
   - www.tokyo2023.ga:443@trojan
